<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtGameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/game_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/calendarImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/release_date"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/txtReleaseDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtGameTitle"
        app:srcCompat="@drawable/ic_date_range"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txtReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/release_date"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/calendarImage" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <ImageView
        android:id="@+id/timeImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/playtime"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/txtPlaytime"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/txtGameTitle"
        app:srcCompat="@drawable/ic_access_time"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txtPlaytime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/playtime"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/timeImage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/txtRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/rating"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/txtSuggested"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGameTitle" />

    <TextView
        android:id="@+id/txtSuggested"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/suggested_by"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRating" />

</androidx.constraintlayout.widget.ConstraintLayout>